# raytracer_cpp

./: .gitignore  README.md
include/: canvas.h  color.h  consts.h  matrix.h  transformations.h  tuple.h
render/: CMakeLists.txt
render/include/: environment.h  projectile.h
render/outputs/: clock_hours.ppm  projectile.ppm
render/src/: clock_hours.cpp  projectile.cpp
src/: canvas.cpp  color.cpp  matrix.cpp  transformations.cpp  tuple.cpp
test/: CMakeLists.txt  canvas_tests.cpp  matrix_tests.cpp  transformations_tests.cpp  tuple_tests.cpp
